--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <artifactFinalNamePrefix>Trylma-WATD</artifactFinalNamePrefix>
     </properties>
 
     <dependencies>
